testcases/compiler2015/Phase2/CompileError/naive5-5100379071-puyouer.c
/*
 * naive
 */
struct A { int a; };

int main() {
    struct A a;
    if (a) {}
    return 0;
}
